<resources>
    <string name="app_name">爱动健身</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_up_label">上拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="no_string"></string>
    <string name="share">分享</string>
    <string name="unknown_time">未知时间</string>
    <string name="invite">邀请</string>
    <string name="s_year">年前</string>
    <string name="s_month">月前</string>
    <string name="s_day">天前</string>
    <string name="net_error">网络连接错误</string>
    <string name="s_hour">小时前</string>
    <string name="six_password">请至少输入6位字数密码</string>
    <string name="s_minute">分钟前</string>
    <string name="s_second">秒前</string>
    <string name="s_week">周前</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="add_friend2">加好友</string>
    <string name="myMxNum">我的美型号：</string>
    <string name="latest_activity">最新活动</string>
    <string name="please_at_least">请至少选择一项</string>
    <string name="removeFromGroup">移出群组</string>
    <string name="removeSuccess">删除成功</string>
    <string name="removeFail">删除失败</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="Is_sending_a_request">正在发送请求...</string>
    <string name="Request_to_join">请求加入</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失败</string>
    <string name="send_the_request_is">发送请求成功，等待群主同意</string>
    <string name="Join_the_group_chat">加入群聊成功</string>
    <string name="Failed_to_join_the_group_chat">加入群聊失败:</string>
    <string name="Add_group_members_fail">添加群成员失败:</string>
    <string name="recent_purchase">最近购买</string>
    <string name="stopcar">停车</string>
    <string name="recommendedprivateteaching">推荐私教</string>
    <string name="contact_privateteaching">联系私教</string>
    <string name="wifi">Wi-Fi</string>
    <string name="mx_danbao">美型担保</string>
    <string name="perfectdata">完善资料</string>
    <string name="danclass">单课时长</string>
    <string name="ontouch">点击上传头像</string>
    <string name="shower">淋浴</string>
    <string name="needyuyue">需要提前预约。</string>
    <string name="validity_period">有效期截止</string>
    <string name="shiyongstore">适用门店</string>
    <string name="now_buy">立即购买</string>
    <string name="xiaoke">到店后请消课</string>
    <string name="method_one">方式1 让私教或前台扫描下面二维码进行消课</string>
    <string name="method_two">方式2 让私教或前台扫描下面二维码进行消课</string>
    <string name="order_number">订单号:</string>
    <string name="order_number1">课单号</string>
    <string name="catering">餐饮</string>
    <string name="shanghai">上海</string>
    <string name="chosecity">选择城市</string>
    <string name="gpscity">GPS定位城市</string>
    <string name="kaitongcity">已开通的城市</string>
    <string name="youxiaoqi">有效期截止</string>
    <string name="minute">分钟</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="class_content">课程内容</string>
    <string name="special_explain">特殊说明</string>
    <string name="allwen">全文</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="group_chat">群聊</string>
    <string name="have_you_removed">已把你从他好友列表里移除</string>
    <string name="Less_than_chat_server_connection">连接不到聊天服务器</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="Remove_the_notification">移除通知</string>
    <string name="Group_name_cannot_be_empty">群组名称不能为空</string>
    <string name="Is_to_create_a_group_chat">正在创建群聊...</string>
    <string name="Failed_to_create_groups">创建群组失败:</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="mute">静音</string>
    <string name="answer">接听</string>
    <string name="Hands_free">免提</string>
    <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="hang_up">挂断</string>
    <string name="temporary_does_not">暂不支持大于10M的视频！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="recording_video">录制</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="quickRegist">快速注册</string>
    <string name="regist">注册</string>
    <string name="login">登录</string>
    <string name="getActiveCode">获取验证码</string>
    <string name="next">下一步</string>
    <string name="finishRegist">完成注册</string>
    <string name="comment">评论</string>
    <string name="comment_count">条评论</string>
    <string name="commentDetail">评论详情</string>
    <string name="selfFilter">自定义筛选</string>
    <string name="ok">确定</string>
    <string name="genderChoice">性别选择</string>
    <string name="all">全部</string>
    <string name="userId">用户身份</string>
    <string name="coach">私教</string>
    <string name="fan">健身爱好者</string>
    <string name="good">赞</string>
    <string name="transend">转发</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="txtInputSearchFrend">输入美型号/昵称</string>
    <string name="txtInputOfficlFrend">输入官方美型号/昵称</string>
    <string name="txtHintSearchVenues">输入关键字/官方美型号</string>
    <string name="txtInputGroupFrend">输入群组美型号/昵称</string>
    <string name="txtInputRegistPhone">输入注册的手机号码</string>
    <string name="txtInputRegistActiveCode">输入验证码</string>
    <string name="txtInputUserName">输入昵称</string>
    <string name="txtInputPasswrod">输入密码（6~14字符）</string>
    <string name="txtInputPasswrodRepeat">重复密码</string>
    <string name="toresetyourpassword">重置密码</string>
    <string name="txtRegistAgree">我已阅读美型&#160;&#160;服务协议</string>
    <string name="tabNear">附近</string>
    <string name="tabFound">发现</string>
    <string name="tabService">场馆</string>
    <string name="sportCircle">爱动圈</string>
    <string name="tabhome">首页</string>
    <string name="tabMsg">消息</string>
    <string name="tabContactor">联系人</string>
    <string name="tabSalePrice">特价</string>
    <string name="tabMine">我的</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="fitness_information">健身资讯</string>
    <string name="information_details">资讯详情</string>
    <string name="layout_tab_found_fitness_information_details_txt_title">梅西神级过人致敬马拉多纳 双响炮助巴萨完胜</string>
    <string name="tencent_news">腾讯新闻</string>
    <string name="layout_tab_found_fitness_information_details_txt_date">03&#8211;17</string>
    <string name="layout_tab_found_fitness_information_details_txt_time">20:23</string>
    <string name="layout_tab_found_fitness_information_details_txt_introduction">巴塞罗那足球俱乐部,中文简称巴萨，是位于西班牙巴塞罗那市的大球会，1899年11月29日由瑞士人汉斯-甘伯创立，西甲传统豪门之一，也是现今欧洲乃至世界足坛最成功的俱乐部之一</string>
    <string name="layout_tab_found_fitness_information_details_txt_content">巴塞罗那足球俱乐部 (Futbol Club Barcelona)，中文简称巴萨，是位于西班牙巴塞罗那市的大球会,1899年11月29日由瑞士人汉斯-甘伯创立，西甲传统豪门之一，也是现今欧洲乃至世界足坛最成功的俱乐部之一</string>
    <string name="tab_found_list_item_txt_title">活动中心</string>
    <string name="tab_found_list_item_txt_content">各类户内外运动，找寻属于你的~</string>
    <string name="tab_found_list_item2_txt_content">一键关注，轻松掌握最新动态</string>
    <string name="tab_found_list_item3_txt_content">海纳百川，各路豪杰</string>
    <string name="tab_found_list_item4_txt_content">正确运动，健康饮食，告别亚健康</string>
    <string name="layout_tab_found_mx_txt">巴塞罗那中国球迷会</string>
    <string name="more">更多</string>
    <string name="moreComment">更多评论</string>
    <string name="group_number">群组号</string>
    <string name="group_members">群组成员</string>
    <string name="group_member">群成员</string>
    <string name="layout_tab_found_mx_txt_number">195258327</string>
    <string name="layout_tab_found_mx_name_txt_number">147</string>
    <string name="layout_tab_found_mx_group_introduction_txt">群组介绍</string>
    <string name="dialogue">对话</string>
    <string name="create_a_group">创建群组</string>
    <string name="about">关注</string>
    <string name="everyday_baokuan">每日爆款</string>
    <string name="private_coach">金牌私教</string>
    <string name="practice_everybody">大家都在练</string>
    <string name="rightrow_coupon">立抢优惠卷</string>
    <string name="coupon_help">优惠卷帮助</string>
    <string name="delete_dynamic">删除动态成功</string>
    <string name="txtprivate">让私教扫一扫，即可获得服务号最新动态</string>
    <string name="has_about">已关注</string>
    <string name="complete">完成</string>
    <string name="found">发现</string>
    <string name="individuality_signature">个性签名</string>
    <string name="id">身份</string>
    <string name="fitness_is_good_at">健身擅长</string>
    <string name="change_password">修改密码</string>
    <string name="ten">10</string>
    <string name="hundred1">字</string>
    <string name="person">人</string>
    <string name="input_telephone">输入注册的手机号码</string>
    <string name="get_identify_code">获取验证码</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="fast_login_without_password">无密码手机快速登录</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="input_new_password">请输入新密码(6-14位字符）</string>
    <string name="input_new_password_again">重复密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="found_password">找回密码</string>
    <string name="confirm">确定</string>
    <string name="input_new_password_limit">输入新密码(6-14字符)</string>
    <string name="input_password_limit_again">确认密码(6-14字符)</string>
    <string name="complete_user_info">完善个人资料</string>
    <string name="click_modify">点击修改</string>
    <string name="nickname_asterisk">昵称*</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="gender_asterisk">性別*</string>
    <string name="please_select">请选择</string>
    <string name="city_asterisk">城市*</string>
    <string name="please_input_signature">请填写个性签名</string>
    <string name="exercise_frequecy">运动频率</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="birthday">生日</string>
    <string name="constellation">星座</string>
    <string name="gymnasium">场馆</string>
    <string name="news">新闻</string>
    <string name="love_sport_circle">爱动圈</string>
    <string name="please_select_birthday">请选择生日</string>
</resources>