<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <com.leyuan.aidong.widget.CommonTitleLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pref_45dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:txtTitle="@string/found"
        app:imgLeft="@color/transparent"
        />

    <Button
        android:id="@+id/btn_gymnasium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymnasium"
        />
    <Button
        android:id="@+id/btn_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person"
        />
    <Button
        android:id="@+id/btn_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        />
    <Button
        android:id="@+id/btn_sport_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_sport_circle"
        />

</LinearLayout>