<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical">
    <com.example.aidong.widget.CommonTitleLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:txtTitle="@string/change_password"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/eidt_old_password"
            style="@style/common_edit_style"
            android:hint="@string/input_old_password"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"
            />

        <ImageView
            style="@style/common_divider_style"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/eidt_new_password"
            style="@style/common_edit_style"
            android:hint="@string/input_new_password"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"
            />

        <ImageView
            style="@style/common_divider_style"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/eidt_new_password_again"
            style="@style/common_edit_style"
            android:hint="@string/input_new_password_again"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"
            />

        <ImageView
            style="@style/common_divider_style"
            />

    </RelativeLayout>


    <Button
        android:background="@color/main_blue"
        android:id="@+id/button_login"
        style="@style/common_button_style"
        android:text="@string/confirm_modify"
        android:layout_marginTop="40dp"

        />


</LinearLayout>