<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fitnessisgood"
                android:background="@color/color_light_white" >

    <RelativeLayout
        android:id="@+id/layout_tab_mine_personal_data_fitness_is_good"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/pref_50dp"
        android:background="@color/new_background_one" >

        <ImageView
            android:id="@+id/layout_tab_mine_personal_data_fitness_is_good_img"
            style="@style/styleImageBack" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/fitness_is_good_at"
            android:textColor="@color/color_white"
            android:textSize="@dimen/pref_17dp" />

        <TextView
            android:id="@+id/layout_tab_mine_personal_data_fitness_is_good_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/pref_15dp"
            android:text="@string/complete"
            android:textColor="@color/color_white"
            android:textSize="@dimen/pref_15dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edittext_the_fitness_is_good"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pref_150dp"
        android:layout_below="@+id/layout_tab_mine_personal_data_fitness_is_good"
        android:background="@color/color_white"
        android:gravity="top|left"
        android:padding="@dimen/pref_10dp"
        android:textColor="@color/color_black" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/pref_0.5dp"
        android:layout_below="@id/edittext_the_fitness_is_good"
        android:background="@color/color_list_distance" />

    <TextView
        android:id="@+id/textview_the_fitness_is_good_zishu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edittext_the_fitness_is_good"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/pref_10dp"
        android:layout_marginRight="@dimen/pref_10dp"
        android:text="@string/hundred1"
        android:textColor="@color/color_txt_gray1"
        android:textSize="@dimen/pref_14dp" />

    <TextView
        android:id="@+id/textview_the_fitness_is_good_zishu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textview_the_fitness_is_good_zishu1"
        android:layout_alignBottom="@+id/textview_the_fitness_is_good_zishu1"
        android:layout_toLeftOf="@+id/textview_the_fitness_is_good_zishu1"
        android:text="@string/ten"
        android:textColor="@color/color_txt_gray1"
        android:textSize="@dimen/pref_14dp" />

</RelativeLayout>